Fix z-index of nav and images.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -73,6 +73,7 @@ section {
 
 #slideshow img {
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100vw;
@@ -179,6 +180,7 @@ section {
 
 #nav-wrapper {
     position: fixed;
+    z-index: 10;
     bottom: 20px;
     width: 100vw;
     display: flex;
@@ -206,7 +208,7 @@ section {
 
 #progressbg {
     position: absolute;
-    z-index: 2;
+    z-index: 12;
     bottom: 0;
     left: 0;
     height: 4px;
@@ -217,7 +219,7 @@ section {
 
 #progress {
     position: absolute;
-    z-index: 3;
+    z-index: 13;
     bottom: 0;
     right: 0;
     height: 4px;
